<resources>
    <string name="app_name">SampleImageButton</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="test" translatable="false">test</string>
    <string name="stations_of_the_cross">
Stations of the Cross/കുരിശിന്റെ സ്റ്റേഷനുകൾ</string>
    <string name="preparatory_prayer">Preparatory Prayer</string>
    <string name="all">ALL:</string>
    <string name="my_lord_jesus_christ_you_have_made_this_journey_to_die_for_me_with_unspeakable_love_and_i_have_so_many_times_ungratefully_abandoned_you_on_this_journey_you_go_to_die_for_love_of_me_i_want_my_beloved_redeemer_to_die_for_love_of_you_my_jesus_i_will_live_and_die_always_united_to_you">My Lord, Jesus Christ, / You have made this journey to die for me with unspeakable love; / and I have so many times ungratefully abandoned You on this journey. / You go to die for love of me; / I want, my beloved Redeemer, to die for love of You. / My Jesus, I will live and die always united to You.</string>
    <string name="textview">TextView</string>
    <string name="at_the_cross_her_station_keeping_n_stood_the_mournful_mother_weeping_n_close_to_jesus_to_the_last">At the cross her station keeping  Stood the mournful Mother weeping   Close to Jesus to the last</string>
    <string name="the_first_station_pilate_condemnes_jesus_to_die">The First Station: Pilate Condemnes Jesus to Die</string>
    <string name="consider_how_jesus_christ_after_being_scourged_and_crowned_with_thorns_was_unjustly_condemned_by_pilate_to_die_on_the_cross">Consider how Jesus Christ, after being scourged and crowned with thorns, was unjustly condemned by Pilate to die on the cross.</string>
    <string name="my_adorable_jesus_n_it_was_not_pilate_no_it_was_my_sins_that_condemned_you_to_die_i_beech_you_by_merits_of_this_sorrowful_journey_to_assist_my_soul_on_its_journey_to_enternity_i_love_you_beloved_jesus_i_love_you_more_than_i_love_myself_with_all_my_heart_i_repent_of_ever_having_offended_you_grant_that_i_may_love_you_always_and_then_do_with_me_as_you_will">My adorable Jesus, /   it was not Pilate; / no, it was my sins that condemned You to die. / I beech You, by merits of this sorrowful journey, / to assist my soul on its journey to enternity./ I love You, beloved Jesus; / I love You more than I love myself. / With all my heart I repent of ever having offended You. / Grant that I may love You always; and then do with me as You will.</string>
    <string name="we_adore_you_o_christ_and_we_praise_you">We adore You, O Christ, and we praise You.</string>
    <string name="v">V:</string>
    <string name="genuflect">(Genuflect)</string>
    <string name="r">R:</string>
    <string name="because_by_your_holy_cross_you_have_reddemed_the_world">Because, by Your holy cross, You have redeemed the world.</string>
    <string name="rise">(Rise)</string>
    <string name="kneel">(Kneel)</string>
    <string name="our_father_hail_mary_glory_be">(Our Father, Hail Mary, Glory Be.)</string>
    <string name="through_her_heart_his_sorrow_sharing_n_all_his_bitter_anguish_bearing_n_now_at_length_the_sword_has_passed">Through her heart, His sorrow sharing   All his bitter anguish bearing   Now at length the sword has passed</string>
    <string name="consider_jesus_as_he_walked_this_road_with_the_cross_on_his_shoulders_thinking_of_us_and_offering_to_his_father_in_our_behalf_the_death_he_was_about_to_suffer">Consider Jesus as He walked this road with the cross on His shoulders, thinking of us, and offering to His Father in our behalf, the death He was about to suffer.</string>
    <string name="my_most_beloved_jesus_n_i_embrace_all_the_sufferings_you_have_destined_for_me_until_death_n_i_beg_you_by_all_you_suffered_in_carrying_your_cross_to_help_me_carry_mine_with_your_perfect_peace_and_resignation_n_i_love_you_jesus_my_love_n_i_repent_of_ever_having_offended_you_n_never_let_me_separate_myself_from_you_again_n_grant_that_i_may_love_you_always_and_then_do_with_me_as_you_will">My most beloved Jesus, /   I embrace all the sufferings You have destined for me until death. /   I beg You, by all You suffered in carrying Your cross, / to help me carry mine with your perfect peace and resignation. /   I love You, Jesus, my love; /   I repent of ever having offended You. /   Never let me separate myself from You again. /   Grant that I may love You always; and then do with me as You will.</string>
    <string name="o_how_sad_and_sore_depressed_n_was_that_mother_highly_blessed_n_of_the_sole_begotten_one">O, how sad and sore depressed   Was that Mother highly blessed   Of the sole Begotten One</string>
    <string name="the_third_station_jesus_falls_the_first_time">The Third Station: Jesus Falls the First Time</string>
    <string name="consider_the_first_fall_of_jesus_loss_of_blood_from_the_scourging_and_crowing_with_thorns_had_so_weakened_him_that_he_could_hardly_walk_and_yet_he_had_to_carry_that_great_load_upon_his_shoulders_as_the_soldiers_struck_him_cruelly_he_fell_serveral_times_under_the_heavy_cross">Consider the first fall of Jesus. Loss of blood from the scourging and crowing with thorns had so weakened him that He could hardly walk; and yet He had to carry that great load upon His shoulders. As the soldiers struck Him cruelly, He fell serveral times under the heavy cross.</string>
    <string name="my_beloved_jesus_n_it_was_not_the_weight_of_the_cross_but_the_weight_of_my_sins_which_made_you_suffer_so_much_by_the_merits_of_this_first_fall_save_me_from_falling_into_mortal_sin_n_i_love_you_o_my_jesus_with_all_my_heart_n_i_am_sorry_that_i_have_offended_you_n_may_i_never_offend_you_again_n_grant_that_i_may_love_you_always_n_and_then_do_with_me_as_you_will">My beloved Jesus, /  \n it was not the weight of the cross / but the weight of my sins which made You suffer so much. / By the merits of this first fall, / save me from falling into mortal sin./   I love You, O my Jesus, with all my heart; / \n  I am sorry that I have offended You. / \n  May I never offend You again. /  \n Grant that I may love You always; \n and then do with me as You will.</string>
    <string name="christ_above_in_torment_hangs_n_she_beneath_beholds_the_pangs_n_of_her_dying_glorious_son">Christ above in torment hangs   She beneath beholds the pangs   Of her dying, glorious Son</string>
    <string name="the_fourth_station_jesus_meets_his_afflicted_mother">The Fourth Station: Jesus Meets His Afflicted Mother</string>
    <string name="consider_how_the_son_met_his_mother_on_his_way_to_calvary_jesus_and_mary_gazed_at_each_other_and_their_looks_became_as_so_many_arrows_to_wound_those_hearts_which_loved_each_other_so_tenderly">Consider how the Son met his Mother on His way to Calvary. Jesus and Mary gazed at each other and their looks became as so many arrows to wound those hearts which loved each other so tenderly</string>
    <string name="my_most_loving_jesus_by_the_pain_you_suffered_in_this_meeting_grant_me_the_grace_of_being_truly_devoted_by_your_most_holy_mother_and_you_my_queen_who_was_overwhelmed_with_sorrow_obtain_for_me_by_your_prayers_a_tender_and_a_lasting_remembrance_of_the_passion_of_your_divine_son_i_love_you_jesus_my_love_above_all_things_i_repent_of_ever_having_offended_you_never_allow_me_to_offend_you_again_grant_that_i_may_love_you_always_and_then_do_with_me_as_you_will">My most loving Jesus, / \n by the pain You suffered in this meeting / grant me the grace of being truly devoted by Your most holy Mother. / And You, my Queen who was overwhelmed with sorrow, / obtain for me by Your prayers / a tender and a lasting remembrance of the passion of Your divine Son. / I love You, Jesus, my Love, above all things. / I repent of ever having offended You. / Never allow me to offend You again. / Grant that I may love You always; and then do with me as You will.</string>
    <string name="is_there_one_who_would_not_weep_n_whelmed_in_miseries_so_deep_n_christ_s_dear_mother_to_behold">Is there one who would not weep,   \'whelmed in miseries so deep   Christ\'s dear Mother to behold.</string>
    <string name="the_fifth_station_simon_helps_jesus_carry_the_cross">The Fifth Station: Simon Helps Jesus Carry the Cross</string>
    <string name="consider_how_weak_and_weary_jesus_was_at_each_step_he_was_at_the_point_of_expiring_fearing_that_he_would_die_on_the_way_when_they_wished_him_to_die_the_infamous_death_on_the_cross_they_forced_simon_of_cyrene_to_help_carry_the_cross_after_our_lord">Consider how weak and weary Jesus was. At each step He was at the point of expiring. Fearing that He would die on the way when they wished Him to die the infamous death on the cross, they forced Simon of Cyrene to help carry the cross after Our Lord.</string>
    <string name="my_beloved_jesus_i_will_not_refuse_the_cross_as_simon_did_i_accept_it_and_embrace_it_i_accept_in_particular_the_death_that_is_destined_for_me_with_all_the_pains_that_may_accompany_it_i_unite_it_to_your_death_and_i_offer_it_to_you_you_have_died_for_love_of_me_i_will_die_for_love_of_you_and_to_please_you_help_me_by_your_grace_i_love_you_jesus_my_love_i_repent_of_ever_having_offended_you_never_let_me_offend_you_again_grant_that_i_may_love_you_always_and_then_do_with_me_as_you_will">My beloved Jesus / \n I will not refuse the cross as Simon did: / I accept it and embrace it. / I accept in particular the death that is destined for me / with all the pains that may accompany it. / I unite it to Your death / and I offer it to You. / You have died for love of me; / I will die for love of You and to please You. / Help me by your grace. / I love You, Jesus, my Love; I repent of ever having offended You. / Never let me offend You again. / Grant that I may love You always; and then do with me as You will.</string>
    <string name="can_the_human_heart_refrain_n_from_partaking_in_her_pain_n_in_that_mother_s_pain_untold">Can the human heart refrain   From partaking in her pain   In that Mother\'s pain untold</string>
    <string name="the_eleventh_station_jesus_is_nailed_to_the_cross">The Eleventh Station: Jesus Is Nailed to the Cross</string>
    <string name="consider_jesus_thrown_down_upon_the_cross_he_stretched_out_his_arms_and_offered_to_his_enternal_father_the_sacrifice_of_his_life_for_our_salvation_they_nailed_his_hands_and_feet_and_then_raising_the_cross_left_him_to_die_in_anguish">Consider Jesus, thrown down upon the cross, He stretched out His arms and offered to His enternal Father the sacrifice of His life for our salvation. They nailed His hands and feet, and then, raising the cross, left Him to die in anguish.</string>
    <string name="let_me_share_with_you_his_pain_n_who_for_all_our_sins_was_slain_n_who_for_me_in_torments_died">Let me share with you His pain,   Who for all our sins was slain,   Who for me in torments died.</string>
    <string name="my_despised_jesus_nail_my_heart_to_the_cross_that_it_may_always_remain_there_to_love_you_and_never_leave_you_again_i_love_you_more_than_myself_i_am_sorry_for_ever_having_offended_you_never_permit_me_to_offend_you_again_grant_that_i_may_love_you_always_and_then_do_with_me_as_you_will">My despised Jesus, / nail my heart to the cross / that it may always remain there to love You and never leave You again. / I love You more than myself; / I am sorry for ever having offended You. / Never permit me to offend You again. / Grant that I may love You always, and then do with me as You will.</string>
    <string name="english">English</string>
    <string name="liturgy_of_the_hours">Liturgy of the Hours</string>
    <string name="prayer_of_the_sacrement_of_confession">Prayer of the Sacrament of Confession</string>
    <string name="malaylam">Malayalam</string>
    <string name="website">Website</string>
    <string name="rosary">Rosary/റോസറി</string>
    <string name="locations_of_the_parishes">Locations of the Parishes</string>
</resources>